--- a/src/static/index.html
+++ b/src/static/index.html
@@ -17,5 +17,6 @@
     <script src="js/react-bootstrap.js"></script>
     <script src="js/babel.min.js"></script>
     <script type="text/babel" src="js/app.js"></script>
+    <img src="image.jpg" alt="My Embedded Image" width="300" height="200">
 </body>
 </html>
