--- a/src/static/index.html
+++ b/src/static/index.html
@@ -19,7 +19,7 @@
     <script type="text/babel" src="js/app.js"></script>
     <div id="root"></div>
     <div class="center-container">
-        <img src="image.jpg" alt="My Embedded Image" width="300" height="200">
+        <img src="image.jpg" alt="My Embedded Image" width="300" height="200" class="bottom-image">
     </div>
 </body>
 </html>
