--- a/src/static/index.html
+++ b/src/static/index.html
@@ -18,6 +18,7 @@
     <script src="js/babel.min.js"></script>
     <script type="text/babel" src="js/app.js"></script>
     <div id="root"></div>
+    <p>Another running version of the app connected to the same database</p>
     <div class="center-container">
         <img src="image.jpg" alt="My Embedded Image" width="300" height="200" class="bottom-image">
     </div>
